--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -26,14 +26,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let category of categories">
+    <tr *ngFor="let category of resources">
       <td>
         <strong>{{category.name}}</strong><br>
         <small>{{category.description}}</small>
       </td>
       <td>
         <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Edit</a>
-        <a class="btn btn-outline-danger btn-sm" (click)="deleteCategory(category)">Excluir</a>
+        <a class="btn btn-outline-danger btn-sm" (click)="deleteResource(category)">Excluir</a>
       </td>
     </tr>
   </tbody>
