--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -28,7 +28,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let entry of entries">
+    <tr *ngFor="let entry of resources">
       <td>
         <strong>{{entry.name}}</strong><br>
         <small class="text-success">{{entry.date}}</small><br>
@@ -46,7 +46,7 @@
       </td>
       <td class="text-center">
         <a [routerLink]="[entry.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Edit</a>
-        <button class="btn btn-outline-danger btn-sm" (click)="deleteEntry(entry)">Excluir</button>
+        <button class="btn btn-outline-danger btn-sm" (click)="deleteResource(entry)">Excluir</button>
       </td>
     </tr>
   </tbody>
