--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -31,12 +31,7 @@
   </div>
 </div>
 
-<div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
-  <strong>Erro no servidor:</strong>
-  <ul>
-    <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-  </ul>
-</div>
+<app-form-field-error [form-control]="resourceForm.get('type')"></app-form-field-error>
 
 <button [disabled]= "submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">
   Salvar
