--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -27,7 +27,6 @@
         <app-form-field-error [form-control]="resourceForm.get('type')"></app-form-field-error>
       </div>
 
-
       <!-- name -->
       <div class="form-group col-md-5">
         <label for="name">Lançamento</label>
@@ -104,12 +103,7 @@
   </div>
 </div>
 
-<div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
-  <strong>Erro no servidor:</strong>
-  <ul>
-    <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-  </ul>
-</div>
+<app-server-error-messages [server-error-messages]="serverErrorMessages"></app-server-error-messages>
 
 <button [disabled]= "submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">
   Salvar
