--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
-  <a class="navbar-brand" routerLink="/" routerLinkActive="router-link-active" >FINAN$YS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/reports" routerLinkActive="active" >Relatórios</a>
-      <a class="nav-item nav-link" routerLink="/entries" routerLinkActive="active" >Lançamentos</a>
-      <a class="nav-item nav-link" routerLink="/categories" routerLinkActive="active" >Categorias</a>
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <div class="container">
   <router-outlet></router-outlet>
